--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,24 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="description"
+    content="Portfolio con mis proyectos como front-end y fullstack developer, realizados usando, entre otras cosas, React, Redux y Express. Además podrás encontrar mi currículum e información de contacto." />
+    <meta property="og:title" content="Santiago Molina - Fullstack Developer" />
+    <meta property="og:locale" content="es_AR" />
+    <meta property="og:url" content="https://santiago-molina-portfolio2022.vercel.app/" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Portfolio de Santiago Molina, desarrollador web fullstack." />
+    <meta property="og:image" content="https://i.imgur.com/IlAbUjP.png" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Santiago Molina - Fullstack Developer" />
+    <meta name="twitter:url" content="https://santiago-molina-portfolio2022.vercel.app/" />
+    <meta name="twitter:site" content="@santidev7" />
+    <meta name="twitter:description" content="Portfolio de Santiago Molina, desarrollador web fullstack." />
+    <meta name="twitter:image" content="https://i.imgur.com/IlAbUjP.png" />
+    <meta name="twitter:image:alt" content="Imagen del sitio personal de Santiago Molina" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +42,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Santiago Molina</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
